feat(sessions): allow retrieval of currently logged in account
