# app/controllers/application_controller.rb
@@ -1,2 +1,7 @@
 class ApplicationController < ActionController::API
+  private
+
+  def authenticate
+    rodauth.require_account
+  end
 end
