# config/routes.rb
@@ -7,6 +7,8 @@ Rails.application.routes.draw do
   # Can be used by load balancers and uptime monitors to verify that the app is live.
   get "up" => "rails/health#show", :as => :rails_health_check
 
+  get "/current-account", to: "sessions#current_account"
+
   # Defines the root path route ("/")
   # root "posts#index"
 end
